--- a/main.html
+++ b/main.html
@@ -8,6 +8,65 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+      <a href="#https://www.linkedin.com/in/sujata-khobragade-1085b153/">Education_Section</a>
+      <a href="#footer">Contact_Details</a>
+    </nav>
+    <header id="header">
+      <h1>Sujata Khobragade</h1>
+      <img
+        src="https://images.unsplash.com/photo-1510915228340-29c85a43dcfe?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        width="300px"
+      />
+      <p>
+        I am a passionate frontend developer. I am working as curriculum
+        engineer at AccioJob. I have 2.5 years of teaching experience. I love to
+        travel and make good memories.
+      </p>
+    </header>
+    <hr />
+    <section id="skills">
+      <h2>Skills</h2>
+      <!-- List -->
+      <ol type="i">
+        <li>Java</li>
+        <li>C++</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Bootstrap</li>
+      </ol>
+    </section>
+    <hr />
+    <section id="hobbies">
+      <h2>Hobbies</h2>
+      <ul type="square">
+        <li>Singing</li>
+        <li>Dancing</li>
+        <li>Listening to Music</li>
+        <li>Travelling</li>
+      </ul>
+    </section>
+    <hr />
+    <section id="education">
+      <h2>Education</h2>
+      <dl>
+        <dt>Master of Technology</dt>
+        <dd>CSVTU, Bhilai, CG</dd>
+        <dt>Master of Computer Applications</dt>
+        <dd>NIT Raipur, CG</dd>
+      </dl>
+    </section>
+    <hr />
+    <footer id="footer">
+      <h2>Contact Details</h2>
+      <p><b>Address:</b>Nagpur, MH, 441904</p>
+      <p><b>Phone Number:</b> +91 1243652</p>
+      <p><b>Email:</b> sujata@gmail.com</p>
+      <a href="mailto:sujata@gmail.com">Mail me</a>     
+      <a target="_blank" href="https://www.linkedin.com/in/sujata-khobragade-1085b153/">Sujata_LinkedIn</a>
+      <a href="https://netflix.com">Netflix</a>      
+      <a href="https://google.co.in">Google</a>
+    </footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
