--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
     <hr />
     <section id="hobbies">
       <h2>Hobbies</h2>
-      <ul type="square">
+      <ul role= "role type" type="square">
         <li>Singing</li>
         <li>Dancing</li>
         <li>Listening to Music</li>
